--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "gsap": "^3.12.2",
+    "load-image": "^1.0.0",
     "rxjs": "~7.8.0",
     "three": "^0.153.0",
     "tslib": "^2.3.0",
